# SpecPV

./: .gitignore  README.md  pyproject.toml
evaluation/: eval_aime2025_codeelo.py  longbenchv1_pred.py  longbenchv1_summarization.py  longbenchv2_ar.py  longbenchv2_pred.py  pg19_speedup.py
evaluation/config/: dataset2maxlen.json  dataset2prompt.json
evaluation/config/prompts/llama3.1-8b-instruct/: 0shot_cot_musique.txt
evaluation/config/prompts/qwen3-8b/: 0shot_cot_longbench_v2.txt  0shot_cot_musique.txt
evaluation/process_outputs/: eval_longbenchv1_metrics.py  eval_longbenchv2_metrics.py  eval_offload_metrics.py  eval_speedup_metrics.py  eval_summary_metrics.py  get_acclens_tp.py
process_data/: dataset_yarn_train.py  test_dataset_pg19.py
profile/: profile_draft_verify.py
scripts/: codeelo_submit_and_score.py  download_dataset.py  generate_job.py  generate_job_fir.py  longbenchv1_pred.sh  longbenchv1_summarization.sh  longbenchv2_pred.sh  pg19_speedup.sh  pg19_speedup_offload.sh  prefetch_hf_assets.py  submit_job.sh  test_all_datasets.py
scripts/jobs/longbenchv1_summarization/full/gov_report/: eagle3_llama31_8b_yarn_64k__TO__llama31_8b_instruct.slurm
scripts/jobs/longbenchv1_summarization/full/qmsum/: eagle3_llama31_8b_yarn_64k__TO__llama31_8b_instruct.slurm
scripts/jobs/longbenchv1_summarization/naive/gov_report/: eagle3_llama31_8b_yarn_64k__TO__llama31_8b_instruct.slurm
scripts/jobs/longbenchv1_summarization/naive/qmsum/: eagle3_llama31_8b_yarn_64k__TO__llama31_8b_instruct.slurm
sparsesd/: __init__.py
sparsesd/kv/: kv_cache.py
sparsesd/models/: modeling_llama_kv.py  modeling_qwen3_kv.py
sparsesd/speculate/: configs.py  draft.py  speculator.py  utils.py
specpv/: __init__.py
specpv/kv/: kv_cache.py
specpv/models/: modeling_qwen3_kv.py
specpv/speculate/: configs.py  naive_sd.py  profile.py  speculator.py  utils.py
tests/: profile_time.py  test_accept_len.py  test_llama3_eagle3.py  test_llama3_ealge3.py  test_naive.py  test_partial.py
(+2 files in other folders)
