[build-system]
requires = [
  "setuptools>=80",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "specpv"
version = "0.1.0"
description = "Sparse Speculative Decoding for Efficient Long-Context Generation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [{ name = "Zhendong Tan" }]

dependencies = [
  "transformers>=4.56.0",
  "datasets>=2.19",
  "huggingface_hub>=0.24",
  "numpy>=1.26",
  "tqdm>=4.66",
  "safetensors>=0.4.5",
  "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
runtime = [
  "torch==2.10.0",
  "vllm==0.17.1",
]
train = [
  "trl==0.19.1",
]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "black>=24.3",
  "isort>=5.13",
]

[project.urls]
Repository = "https://github.com/TanZhendong/SpecPV.git"

[tool.setuptools]
packages = ["specpv"]
include-package-data = true